Fixed CELL_LIMIT_CF prob in ThriftBroker; Updated documentation